# Task4

./: .env  README.md  app.py  gemini.md  my_agent.py  pyproject.toml  tools.py
.gemini/: settings.json
